Accept solved attempts with rabbitmq queues instead of rest api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8081
 spring.h2.console.enabled=true
 
 # Creates the database in a file
-spring.datasource.url=jdbc:h2:file:~/gamification;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.url=jdbc:h2:file:~/gamification;AUTO_SERVER=TRUE;
 
 # Creates or updates the schema if needed
 spring.jpa.hibernate.ddl-auto=update
@@ -16,3 +16,10 @@ spring.jpa.show-sql=true
 
 # Format SQL
 spring.jpa.properties.hibernate.format_sql=true
+
+# AMQP
+amqp.exchange.attempts=attempts.topic
+amqp.queue.gamification=gamification.queue
+
+# Shows declaration of exchanges, queues, bindings, etc.
+logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
