--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ amqp.queue.gamification=gamification.queue
 
 # Shows declaration of exchanges, queues, bindings, etc.
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
+
+# Spring config
+spring.config.import=consul:
+spring.cloud.consul.config.prefixes=config
+spring.cloud.consul.config.format=yaml
+spring.cloud.consul.config.default-context=defaults
+spring.cloud.consul.config.data-key=application.yml
