Distributed logs with amqp appender using rabbitmq messages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ amqp.queue.gamification=gamification.queue
 
 # Shows declaration of exchanges, queues, bindings, etc.
 logging.level.org.springframework.amqp.rabbit.core.RabbitAdmin=DEBUG
+logging.level.org.springframework.amqp.rabbit.connection.CachingConnectionFactory=WARN
 
 # Spring config
 spring.config.import=consul:
